--- a/css/styles.css
+++ b/css/styles.css
@@ -8,13 +8,36 @@
   --backgraund-second-color: #000000;
   --backgraund-akcent-color: #f7941e;
   --backgraund-aktive-color: #f1f1f2;
+
+  --main-font-family: "Hind Siliguri", sans-serif;
+  --akcent-font-logo: "Homemade Apple", cursive;
 }
 
 body {
-  font-family: "Hind Siliguri", sans-serif;
+  font-family: var(--main-font-family);
   font-style: normal;
   color: var(--main-text-color);
   background-color: var(--backgraund-primary-color);
+}
+
+h1,
+h2,
+h3,
+p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+ul {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 0;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
 
 .list {
@@ -25,17 +48,111 @@ body {
   text-decoration: none;
 }
 
+.container {
+  width: 1440px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/*-------start header-------*/
+.page-header {
+  background-color: var(--backgraund-primary-color);
+}
+
+.header-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-right: 34px;
+  padding-left: 80px;
+}
+
+.logo {
+  font-family: var(--akcent-font-logo);
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 2.17;
+}
+
+.navigation-list {
+  display: flex;
+}
+
+.navigation-list-item {
+  display: flex;
+  align-items: center;
+}
+
+.navigation-list-item:not(:last-child) {
+  margin-right: 31px;
+}
+
 .navigation-link {
+  display: flex;
+  align-items: center;
   font-style: normal;
   font-size: 18px;
   line-height: 1.22;
-  display: flex;
-  align-items: center;
   color: var(--main-text-color);
 }
 
+.header-button {
+  margin-top: 37px;
+  margin-bottom: 37px;
+  min-width: 150px;
+  min-height: 43px;
+  align-items: center;
+  border: 1px solid var(--akcent-text-color);
+  box-sizing: border-box;
+  border-radius: 5px;
+  font-size: 18px;
+  font-weight: 300;
+  line-height: 1.22;
+  text-align: center;
+  text-transform: uppercase;
+  color: var(--akcent-text-color);
+}
+/*-------end header--------*/
+
+/*-------start hero--------*/
+.hero {
+  background-image: url(/images/couple.jpg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: right;
+}
+.hero-container {
+  padding-top: 154px;
+  padding-bottom: 135px;
+  width: 433px;
+}
+
 .hero-title {
-  font-weight: 500;
+  margin-bottom: 36px;
+  
+  font-weight: 600;
   font-size: 56px;
   line-height: 1.23;
+}
+
+.hero-text {
+  margin-bottom: 52px;
+  font-size: 20px;
+  line-height: 1.4;
+}
+
+.hero-button {
+  text-align: center;
+  text-transform: uppercase;
+  border-radius: 5px;
+  border: transparent;
+  color: var(--secondary-text-color);
+  background-color: var(--backgraund-akcent-color);
+  min-width: 200px;
+  min-height: 60px;
+  font-weight: 300;
+  font-size: 18px;
+  line-height: 1.22;
 }
